# microeletronica

./: .gitignore  Indústria_Microeletrônica_Análise_Temporal.ipynb  LICENSE  MELHORIAS.md  README.en.md  README.md  ROADMAP.md  app.py  exploration.ipynb  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: README.md  estabelecimentos_municipios_sp.xlsx
data/raw/: empregados_estados.xlsx  empregados_municipios_sp.xlsx  estabelecimentos_estados.xlsx
src/: __init__.py  charts.py  data_loader.py
ui/: sidebar.py  style.py  views.py
